src/test/ui/coherence-error-suppression.stderr
error[E0412]: cannot find type `DoesNotExist` in this scope
  --> $DIR/coherence-error-suppression.rs:19:14
   |
LL | impl Foo for DoesNotExist {} //~ ERROR cannot find type `DoesNotExist` in this scope
   |              ^^^^^^^^^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
